# ka-graph

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: checkpoint.md  compiled_graph.md  errors.md  images.md  index.md  llms.md  messages.md  node_configuration.md  prebuilt.md  prompts.md  runtime.md  state_graph.md  tracing.md  types.md  visualization.md
docs/webapp/: backend.md  frontend.md  overview.md
src/kagraph/: __init__.py  _studio_config.py  errors.py  images.py  llms.py  messages.py  prompts.py  runtime.py  studio.py  types.py
src/kagraph/checkpoint/: __init__.py  base.py
src/kagraph/graph/: __init__.py  _branch.py  _node.py  message.py  state.py  visualization.py
src/kagraph/prebuilt/: __init__.py  tool_node.py  validation.py
src/kagraph/tracing/: __init__.py  katrace.py
src/kagraph/webapp/: README.md
src/kagraph/webapp/backend/: database.py  main.py  models.py  requirements.txt
src/kagraph/webapp/frontend/: README.md  next.config.ts  package-lock.json  package.json
tests/: test_branching.py  test_checkpoint_saver.py  test_kbench_runtime_integration.py  test_llm_loading.py  test_multimodal_inputs.py  test_prebuilt_tool_node.py  test_prompt_tooling.py  test_state_graph_builder.py  test_state_graph_execution.py  test_state_graph_runtime.py  test_studio_backend.py  test_studio_trace_consistency.py  test_tracing.py  test_visualization.py
tutorials/: adaptive_rag.ipynb  agent_simulation_evaluation.ipynb  information_gather_prompting.ipynb  multi_agent_collaboration.ipynb  plan_and_execute.ipynb  react.ipynb  reflection.ipynb  rewoo.ipynb  tot.ipynb  web_voyager.ipynb
(+8 files in other folders)
